--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/fiber": "^9.4.2",
-    "@react-three/drei": "^10.7.7",
-    "react-dom": "^19.2.2",
     "react": "^19.2.2",
+    "react-dom": "^19.2.2",
     "three": "^0.182.0",
+    "@react-three/fiber": "^9.4.2",
     "@react-three/postprocessing": "^3.0.4",
-    "postprocessing": "^6.38.0"
+    "postprocessing": "^6.38.0",
+    "@react-three/drei": "^10.7.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
